--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.0",
         "cviebrock/eloquent-sluggable": "^10.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
@@ -14,6 +15,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.4",
         "laravelcollective/html": "^6.4",
+        "maatwebsite/excel": "^3.1",
         "realrashid/sweet-alert": "^7.1",
         "spatie/laravel-permission": "^6.3"
     },
