--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravelcollective/html": "^6.4",
         "maatwebsite/excel": "^3.1",
         "realrashid/sweet-alert": "^7.1",
-        "spatie/laravel-permission": "^6.3"
+        "spatie/laravel-permission": "^6.3",
+        "spatie/laravel-sitemap": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
